# bencode-parser

./: bencode-parser.cabal
app/: Main.hs
src/: BencodeParser.hs
test/: ParseSpec.hs
